# wiesn-agent-dplymt

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  README.md  config.example.yaml  docker-compose.yml  pyproject.toml  setup-server.sh
src/wiesn_agent/: __init__.py  api.py  chat_agent.py  client.py  config_model.py  graphify_pipeline.py  graphify_postpass.py  history.py  main.py  mcp_server.py  portal_adapters.py  scanner.py  workflow.py
src/wiesn_agent/agents/: wiesn_agents.py
src/wiesn_agent/tools/: __init__.py  browser_tools.py  notify_tools.py
web/: index.html  package-lock.json  package.json
web/src/: App.tsx  api.ts  index.css
web/src/components/: ActivityFeed.tsx  Layout.tsx  PortalCard.tsx  SlotToast.tsx  StatusBadge.tsx
web/src/pages/: Dashboard.tsx  Portals.tsx  Settings.tsx  Statistics.tsx  Welcome.tsx
